# 002_etfbot

./: .gitignore  4주차요약.md  5주차요약.md  5주차제출.ipynb  6주차요약.md  PRJ02_W1_001_RAG_Evaluation_Intro.ipynb  PRJ02_W1_002_Retrieval_Metrics.ipynb  PRJ02_W1_003_Retrieval_Keyword_Hybrid.ipynb  PRJ02_W1_004_Retrieval_Query_Expansion.ipynb  PRJ02_W1_005_Retrieval_Rerank_Compression.ipynb  PRJ02_W1_006_Contextual_Retrieval.ipynb  PRJ02_W2_001_LLM_Providers.ipynb  PRJ02_W2_002_Generation_Metrics.ipynb  PRJ02_W2_003_LLM-as-Judge-LangChain.ipynb  PRJ02_W2_004_Pairwise_Evaluation.ipynb  PRJ02_W2_005_Langfuse_Evaluation.ipynb  PRJ02_W2_006_Evaluator_Agreement_Analysi.ipynb  PRJ02_W3_001_ETF_Data_Collection.ipynb  PRJ02_W3_002_ETF_Text2SQL.ipynb  PRJ02_W3_003_ETF_Text2SQL_RAG.ipynb  PRJ02_W3_004_ETF_Text2SQL_Cardinality.ipynb  PRJ02_W3_005_Text2SQL_FewShot.ipynb  PRJ02_W3_006_ETF_Recommendation.ipynb  PRJ02_W3_007_Text2SQL_Decomposition[Lecture].ipynb  PRJ02_W3_008_Text2SQL_Decomposition.ipynb  README.md  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
data/: 5week_ab_raw_answers.csv  5week_final_ab_eval.csv  5week_ragas_qa_42.csv  5week_summary.json  Rivian_EN.md  Tesla_EN.md  evaluation_dataset.csv  evaluation_result.csv  ragas_testset.csv  ragas_testset_en.csv  retrieved_results.json
